cloudflare/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress-name>
  namespace: <app-namespace>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: cloudflare-issuer # clusterissuer
spec:
  ingressClassName: nginx
  rules:
    - host: <domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <app-servicename>
                port:
                  name: https # Change to match your service port name (e.g., http, 8080)
  tls:
    - hosts:
        - <domain>
      secretName: <app-name>-tls
